@@ -2,6 +2,8 @@ kickseed (0.49) UNRELEASED; urgency=low
 
   * Adjust 'bootloader --md5pass' for changes in grub-installer 1.31
     (LP: #221501).
+  * Use 'sed -i' to change /target/etc/nsswitch.conf (thanks, Christer
+    Edwards).
 
  -- Colin Watson <cjwatson@debian.org>  Wed, 30 Apr 2008 10:19:17 +0100
 
